# pdfio

./: .gitattributes  .gitignore  .gitmodules  .lgtm.yml  CHANGES.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  INSTALL.md  Makefile  Makefile.in  NOTICE  README.md  SECURITY.md  TODO.md  aclocal.m4  configure  configure.ac  makesrcdist  meson.build  my_pdfa_test.c  my_test_executable  packages.config  pdfio-aes.c  pdfio-array.c  pdfio-base-font-widths.h  pdfio-cgats001-compat.h  pdfio-common.c  pdfio-content.c  pdfio-content.h  pdfio-crypto.c  pdfio-dict.c  pdfio-file.c  pdfio-lzw.c  pdfio-md5.c  pdfio-object.c  pdfio-page.c  pdfio-private.h  pdfio-rc4.c  pdfio-read.c  (+32 more)
.github/: codeql.yml
.github/workflows/: build.yml  codeql.yml  coverity.yml
doc/: pdfio.3  pdfio.html  pdfio.md
examples/: Makefile  code128-LICENSE.txt  code128.c  create_tagged_pdf  create_tagged_pdf.c  image2pdf.c  md2pdf.c  md2pdf.md  mmd.c  pdf2text.c  pdfioinfo.c  pdfiomerge.c
pdfio.xcodeproj/: project.pbxproj
src/: pdfio-aes.c  pdfio-array.c  pdfio-content.c  pdfio-crypto.c  pdfio-dict.c  pdfio-file.c  pdfio-object.c  pdfio-sha256.c  pdfio-value.c  pdfiototext.c  ttf.h
testfiles/: CGATS001Compat-v2-micro.txt  iso22028-2-romm-rgb.txt
